# nonebot-plugin-tvseries

./: README.md  pyproject.toml
nonebot_plugin_tvseries/: date_source.py
src/nonebot_plugin_tvseries/: __init__.py  date_source.py
